Organizacion de componentes

--- a/src/client/app/core/toolbar/toolbar.component.html
+++ b/src/client/app/core/toolbar/toolbar.component.html
@@ -1,2 +1,3 @@
-<h1>Angular starter template</h1>
-<div class="more"></div>
+<div i18n class="toolbar">
+	<label translate>Angular starter template</label>
+</div>
