--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -1,10 +1,16 @@
-<p>Howdy! Here's a list of awesome computer scientists. Do you know any others? Add to the list yourself.</p>
+<div >
+<p>Angular starter template es un proyecto que implementa las mejores prácticas en la codificación, construcción y prueba de aplicaciones angular.</p>
 
-<form (submit)="addName()">
-  <input [(ngModel)]="newName" name="newName" placeholder="Awesome Computer Scientist">
-  <button type="submit">Add</button>
-</form>
+<h2 i18n> Caracteristicas </h2>
+  <ul>
+     <li> Listo para usar, sistema de compilación tipado estático usando Gulp para trabajar con TypeScript. </li>
+     <li> Desarrollos de producción y desarrollo. </li>
+     <li> Ejemplos de pruebas de unidades con Jasmine y Karma, incluida la cobertura de código. </li>
+     <li> Pruebas de extremo a extremo con Cypress. </li>
+     <li> Servidor de desarrollo con recarga en vivo. </li>
+     <li> Gestión de definición de TypeScript utilizando Types. </li>
+     <li> Basic Service Worker, que implementa "Cache then network strategy". </li>
+  </ul>
 
-<ul>
-  <li *ngFor="let name of names">{{ name }}</li>
-</ul>
+@Andreslon
+</div>
