--- a/src/client/app/core/toolbar/toolbar.component.css
+++ b/src/client/app/core/toolbar/toolbar.component.css
@@ -1,23 +1,21 @@
-:host {
-  background-color: #106cc8;
-  color: rgba(255, 255, 255, 0.87);
-  display: block;
-  height: 48px;
-  padding: 0 16px;
-}
-
-h1 {
-  display: inline;
-  font-size: 20px;
-  font-weight: normal;
-  letter-spacing: 0.1px;
-  line-height: 48px;
-}
-
-.more {
-  background: url("./assets/svg/more.svg");
-  float: right;
-  height: 24px;
-  margin-top: 12px;
-  width: 24px;
+.toolbar {
+  box-sizing: border-box;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  height: 60px;
+  text-decoration: none solid rgba(0, 0, 0, 0.87);
+  text-size-adjust: 100%;
+  column-rule-color: rgba(0, 0, 0, 0.87);
+  align-content: flex-start;
+  align-items: flex-start;
+  justify-content: center;
+  perspective-origin: 712.5px 30px;
+  transform-origin: 712.5px 30px;
+  caret-color: rgba(0, 0, 0, 0.87);
+  background: rgb(250, 250, 249) none repeat scroll 0% 0% / auto padding-box border-box;
+  border: 0px none rgba(0, 0, 0, 0.87);
+  flex-flow: column nowrap;
+  font: normal normal 400 normal 24px / 32px Roboto, "Helvetica Neue", sans-serif;
+  outline: rgba(0, 0, 0, 0.87) none 0px;
+  padding: 0px 70px;
 }
