--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -69,3 +69,161 @@ button {
 button:hover {
   background-color: #28739e;
 }
+
+
+
+
+
+
+/* Loader */
+.hiddeLoader {
+  display: none;
+}
+
+.showLoader {
+  display: block;
+}
+
+.loader {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+  margin-top: 40%;
+}
+
+.loader-align {
+  bottom: 70px !important;
+}
+
+.loader .center {
+  position: absolute;
+  top: 22px;
+  left: 22px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #33cc33;
+  -webkit-animation: pulse 5s infinite linear;
+  animation: pulse 5s infinite linear;
+}
+
+.loader .circle {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #253081;
+  border-radius: 50%;
+  opacity: 0;
+  -webkit-animation: radar 2.5s infinite linear;
+  animation: radar 1.8s infinite linear;
+}
+
+.loader .circle:nth-child(1) {
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+}
+
+.loader .circle:nth-child(2) {
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+      -webkit-transform: scale3d(1, 1, 1);
+      transform: scale3d(1, 1, 1);
+  }
+
+  50% {
+      -webkit-transform: scale3d(1.5, 1.5, 1.5);
+      transform: scale3d(1.5, 1.5, 1.5);
+  }
+
+  100% {
+      -webkit-transform: scale3d(1, 1, 1);
+      transform: scale3d(1, 1, 1);
+  }
+}
+
+@keyframes pulse {
+  0% {
+      -webkit-transform: scale3d(1, 1, 1);
+      transform: scale3d(1, 1, 1);
+  }
+
+  50% {
+      -webkit-transform: scale3d(1.5, 1.5, 1.5);
+      transform: scale3d(1.5, 1.5, 1.5);
+  }
+
+  100% {
+      -webkit-transform: scale3d(1, 1, 1);
+      transform: scale3d(1, 1, 1);
+  }
+}
+
+@-webkit-keyframes radar {
+  0% {
+      -webkit-transform: scale(0);
+      transform: scale(0);
+      opacity: 0;
+  }
+
+  25% {
+      -webkit-transform: scale(0);
+      transform: scale(0);
+      opacity: 0.5;
+  }
+
+  50% {
+      -webkit-transform: scale(1);
+      transform: scale(1);
+      opacity: 1;
+  }
+
+  75% {
+      -webkit-transform: scale(1.5);
+      transform: scale(1.5);
+      opacity: 0.5;
+  }
+
+  100% {
+      -webkit-transform: scale(2);
+      transform: scale(2);
+      opacity: 0;
+  }
+}
+
+@keyframes radar {
+  0% {
+      -webkit-transform: scale(0);
+      transform: scale(0);
+      opacity: 0;
+  }
+
+  25% {
+      -webkit-transform: scale(0);
+      transform: scale(0);
+      opacity: 0.5;
+  }
+
+  50% {
+      -webkit-transform: scale(1);
+      transform: scale(1);
+      opacity: 1;
+  }
+
+  75% {
+      -webkit-transform: scale(1.5);
+      transform: scale(1.5);
+      opacity: 0.5;
+  }
+
+  100% {
+      -webkit-transform: scale(2);
+      transform: scale(2);
+      opacity: 0;
+  }
+}
+ /* Loader */
